refactor:参照から値に変更
Refactor ProductCode handling to utilize its value object.

Replaced raw String usage with the `ProductCode` value object in `SalesOrderLine` and its related tests, ensuring consistent and type-safe handling of product codes. Updated mappings, assertions, and method calls to reflect this change. This improves code clarity and enforces domain constraints.